; ModuleID = '/home/carl/AnghaBench/linux/drivers/s390/char/extr_fs3270.c_fs3270_working.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/s390/char/extr_fs3270.c_fs3270_working.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fs3270 = type { i32, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.fs3270*)* @fs3270_working to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @fs3270_working(%struct.fs3270* %0) #0 {
  %2 = alloca %struct.fs3270*, align 8
  store %struct.fs3270* %0, %struct.fs3270** %2, align 8
  %3 = load %struct.fs3270*, %struct.fs3270** %2, align 8
  %4 = getelementptr inbounds %struct.fs3270, %struct.fs3270* %3, i32 0, i32 1
  %5 = load i64, i64* %4, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %13

7:                                                ; preds = %1
  %8 = load %struct.fs3270*, %struct.fs3270** %2, align 8
  %9 = getelementptr inbounds %struct.fs3270, %struct.fs3270* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 8
  %11 = call i64 @raw3270_request_final(i32 %10)
  %12 = icmp ne i64 %11, 0
  br label %13

13:                                               ; preds = %7, %1
  %14 = phi i1 [ false, %1 ], [ %12, %7 ]
  %15 = zext i1 %14 to i32
  ret i32 %15
}

declare dso_local i64 @raw3270_request_final(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
